--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
     "esbonio.sphinx.buildDir": "${workspaceRoot}/docs/build",
-    "esbonio.sphinx.confDir": "${workspaceFolder}/docs/source"
+    "esbonio.sphinx.confDir": "${workspaceFolder}/docs/source",
+    "python.linting.flake8Enabled": true,
+    "python.linting.enabled": true
 }
