--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
       - id: check-json
       - id: check-merge-conflict
       - id: check-shebang-scripts-are-executable
+        exclude: mpinterfaces_setup.py
 
   - repo: https://github.com/timothycrosley/isort
     rev: 5.10.1
