--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,3 +51,4 @@ repos:
     hooks:
       - id: flake8
         additional_dependencies: [flake8-isort, flake8-builtins, flake8-docstrings] # [flake8-isort, flake8-docstrings]
+        exclude:  ^seibuilder/mpinterfaces/
