--- a/environment.yml
+++ b/environment.yml
@@ -3,19 +3,14 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.7
-  - ase~=3.20.1
-  - cython
-  - jupyter
-  - jupyterlab
-  - ipython
-  - matplotlib>=3.3.3
-  - numpy>=1.19
+  - python=3.8
+  - ase=3.22.1
+  - jupyter=1.0.0
+  - jupyterlab=3.3.2
+  - matplotlib=3.5.1
+  - numpy=1.22.3
   - scikit-learn~=0.22.2.post1
   - scipy~=1.5.2
   - pip:
-      - jupyter-bokeh~=3.0.0
-      - nglview
-      - MPInterfaces~=2020.6.19
-
-# TODO update dependecies
+      - nglview==3.0.3
+      - pymatgen==2020.12.18
