--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-ase # TODO Fix version of all requiremnts
+ase==3.22.1
 jupyter==1.0.0
 jupyterlab==3.3.2
-jupyter-bokeh==3.0.4
 matplotlib==3.5.1
-# MPInterfaces # TODO Get rid of MPInterfaces
 numpy==1.22.3
-pymatgen==2019.10.16
+pymatgen==2020.12.18
 nglview==3.0.3
 scikit-learn~=0.22.2.post1
 scipy~=1.5.2
