--- a/.github/workflows/liter.yml
+++ b/.github/workflows/liter.yml
@@ -23,7 +23,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
     # Checkout setup python env
-    - uses: actions/setup-python@v2
+    - name: Setup python 3.8
+      uses: actions/setup-python@v2
+      with:
+          python-version: 3.8
     - name: Install Python dependencies
       run: |
           python -m pip install --upgrade pip
@@ -70,7 +73,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pre-commit
-        python -m pip install -r precommit_requirements.txt
+        python -m pip install -r developers_requirements.txt
     - name: Run pre-commit hooks
       run: |
         pre-commit install
