--- a/.github/workflows/liter.yml
+++ b/.github/workflows/liter.yml
@@ -90,6 +90,6 @@ jobs:
       run: |
         for f in $(ls *.ipynb); do nbqa isort $f ; done
 
-    - name: nbQA mypy report
-      run: |
-        for f in $(ls *.ipynb); do nbqa mypy --ignore-missing-imports  $f ; done
+    # - name: nbQA mypy report
+    #   run: |
+    #     for f in $(ls *.ipynb); do nbqa mypy --ignore-missing-imports  $f ; done
