--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ fail_fast: true
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.2.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -21,7 +21,7 @@ repos:
       - id: isort
 
   - repo: https://github.com/asottile/pyupgrade
-    rev:  v2.31.1
+    rev:  v2.32.0
     hooks:
     -   id: pyupgrade
         args: [--py36-plus]
@@ -38,7 +38,7 @@ repos:
         additional_dependencies: [black==21.9b0]
 
   - repo: https://github.com/nbQA-dev/nbQA
-    rev: 1.1.1
+    rev: 1.3.1
     hooks:
       - id: nbqa-black
       - id: nbqa-pyupgrade
@@ -53,3 +53,8 @@ repos:
       - id: flake8
         additional_dependencies: [flake8-isort, flake8-builtins, flake8-docstrings] # [flake8-isort, flake8-docstrings]
         exclude:  ^seibuilder/mpinterfaces/
+
+  -   repo: https://github.com/pre-commit/mirrors-mypy
+      rev: 'v0.942'  # Use the sha / tag you want to point at
+      hooks:
+      -   id: mypy
