--- a/apps.yaml
+++ b/apps.yaml
@@ -8,7 +8,7 @@ my-big-map-app:
     documentation_url: https://sei-builder.readthedocs.io
     logo: https://github.com/paolodeangelis/SEI_builder/blob/main/img/logo.png
     state: development
-    version: '0.1.dev'
+    version: '0.1.0'
   categories:
     - technology-ase
     - classical
