--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,7 +35,7 @@ repos:
     rev: 1.13.0
     hooks:
     -   id: blacken-docs
-        additional_dependencies: [black==21.9b0]
+        additional_dependencies: [black==23.3.0]
 
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 1.7.0
