--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,13 +1,6 @@
-ase==3.22.1
-matplotlib==3.5.1
-numpy==1.22.3
-pymatgen==2020.12.18
-scipy~=1.5.2
-sphinx
+sphinx<7
 sphinxcontrib-napoleon
 sphinx-rtd-theme
 sphinx-tabs
 sphinxcontrib-bibtex
 sphinx-copybutton
-jupyter==1.0.0
-jupyterlab==3.3.2
