--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,3 +1,12 @@
+ase==3.22.1
+jupyterlab==4.0.7
+matplotlib==3.7.3
+numpy==1.24.4
+pymatgen==2023.8.10
+nglview==3.0.8
+scikit-learn~=0.22.2.post1
+scipy~=1.5.2
+
 sphinx<7
 sphinxcontrib-napoleon
 sphinx-rtd-theme
